gccida/c0/fixup_var_refs_insn
/data/output_dir/patch/gcc/ida/clang/O0/gcc-clang-O0/fixup_var_refs_insn/src/function.c:2207:1: error: must use 'enum' tag to refer to type 'machine_mode'
machine_mode promoted_mode, 
^
enum 
/data/output_dir/patch/gcc/ida/clang/O0/gcc-clang-O0/fixup_var_refs_insn/src/function.c:2223:4: error: expected ';' after expression
rtx next_insn; // [rsp+50h] [rbp-60h] 
   ^
   ;
/data/output_dir/patch/gcc/ida/clang/O0/gcc-clang-O0/fixup_var_refs_insn/src/function.c:2225:4: error: expected ';' after expression
rtx note; // [rsp+60h] [rbp-50h] 
   ^
   ;
/data/output_dir/patch/gcc/ida/clang/O0/gcc-clang-O0/fixup_var_refs_insn/src/function.c:2225:5: error: use of undeclared identifier 'note'; did you mean 'none'?
rtx note; // [rsp+60h] [rbp-50h] 
    ^~~~
    none
/data/output_dir/patch/gcc/ida/clang/O0/gcc-clang-O0/fixup_var_refs_insn/src/expr.h:119:17: note: 'none' declared here
enum direction {none, upward, downward};  /* Value has this type.  */
                ^
/data/output_dir/patch/gcc/ida/clang/O0/gcc-clang-O0/fixup_var_refs_insn/src/function.c:2226:4: error: expected ';' after expression
rtx prev_set; // [rsp+68h] [rbp-48h] 
   ^
   ;
/data/output_dir/patch/gcc/ida/clang/O0/gcc-clang-O0/fixup_var_refs_insn/src/function.c:2226:5: error: use of undeclared identifier 'prev_set'
rtx prev_set; // [rsp+68h] [rbp-48h] 
    ^
/data/output_dir/patch/gcc/ida/clang/O0/gcc-clang-O0/fixup_var_refs_insn/src/function.c:2227:4: error: expected ';' after expression
rtx prev; // [rsp+70h] [rbp-40h] 
   ^
   ;
/data/output_dir/patch/gcc/ida/clang/O0/gcc-clang-O0/fixup_var_refs_insn/src/function.c:2227:5: error: use of undeclared identifier 'prev'
rtx prev; // [rsp+70h] [rbp-40h] 
    ^
/data/output_dir/patch/gcc/ida/clang/O0/gcc-clang-O0/fixup_var_refs_insn/src/function.c:2228:4: error: expected ';' after expression
rtx set; // [rsp+78h] [rbp-38h] 
   ^
   ;
/data/output_dir/patch/gcc/ida/clang/O0/gcc-clang-O0/fixup_var_refs_insn/src/function.c:2228:5: error: use of undeclared identifier 'set'; did you mean 'seq'?
rtx set; // [rsp+78h] [rbp-38h] 
    ^~~
    seq
/data/output_dir/patch/gcc/ida/clang/O0/gcc-clang-O0/fixup_var_refs_insn/src/function.c:2220:18: note: 'seq' declared here
 struct rtx_def *seq; // [rsp+30h] [rbp-80h] 
                 ^
/data/output_dir/patch/gcc/ida/clang/O0/gcc-clang-O0/fixup_var_refs_insn/src/function.c:2229:4: error: expected ';' after expression
rtx call_dest; // [rsp+80h] [rbp-30h] 
   ^
   ;
/data/output_dir/patch/gcc/ida/clang/O0/gcc-clang-O0/fixup_var_refs_insn/src/function.c:2229:5: error: use of undeclared identifier 'call_dest'
rtx call_dest; // [rsp+80h] [rbp-30h] 
    ^
/data/output_dir/patch/gcc/ida/clang/O0/gcc-clang-O0/fixup_var_refs_insn/src/function.c:2230:4: error: expected ';' after expression
rtx no_sharea; // [rsp+88h] [rbp-28h] 
   ^
   ;
/data/output_dir/patch/gcc/ida/clang/O0/gcc-clang-O0/fixup_var_refs_insn/src/function.c:2230:5: error: use of undeclared identifier 'no_sharea'; did you mean 'no_share'?
rtx no_sharea; // [rsp+88h] [rbp-28h] 
    ^~~~~~~~~
    no_share
/data/output_dir/patch/gcc/ida/clang/O0/gcc-clang-O0/fixup_var_refs_insn/src/function.c:2210:5: note: 'no_share' declared here
rtx no_share) 
    ^
/data/output_dir/patch/gcc/ida/clang/O0/gcc-clang-O0/fixup_var_refs_insn/src/function.c:2233:1: error: must use 'enum' tag to refer to type 'machine_mode'
machine_mode promoted_modea; // [rsp+9Ch] [rbp-14h] 
^
enum 
/data/output_dir/patch/gcc/ida/clang/O0/gcc-clang-O0/fixup_var_refs_insn/src/function.c:2234:4: error: expected ';' after expression
rtx vara; // [rsp+A0h] [rbp-10h] 
   ^
   ;
/data/output_dir/patch/gcc/ida/clang/O0/gcc-clang-O0/fixup_var_refs_insn/src/function.c:2234:5: error: use of undeclared identifier 'vara'; did you mean 'var'?
rtx vara; // [rsp+A0h] [rbp-10h] 
    ^~~~
    var
/data/output_dir/patch/gcc/ida/clang/O0/gcc-clang-O0/fixup_var_refs_insn/src/function.c:2206:5: note: 'var' declared here
rtx var, 
    ^
/data/output_dir/patch/gcc/ida/clang/O0/gcc-clang-O0/fixup_var_refs_insn/src/function.c:2235:4: error: expected ';' after expression
rtx insna; // [rsp+A8h] [rbp-8h] 
   ^
   ;
/data/output_dir/patch/gcc/ida/clang/O0/gcc-clang-O0/fixup_var_refs_insn/src/function.c:2235:5: error: use of undeclared identifier 'insna'; did you mean 'insn'?
rtx insna; // [rsp+A8h] [rbp-8h] 
    ^~~~~
    insn
/data/output_dir/patch/gcc/ida/clang/O0/gcc-clang-O0/fixup_var_refs_insn/src/function.c:2205:5: note: 'insn' declared here
rtx insn, 
    ^
fatal error: too many errors emitted, stopping now [-ferror-limit=]
20 errors generated.
make: *** [/data/output_dir/patch/gcc/ida/clang/O0/gcc-clang-O0/fixup_var_refs_insn/src/obj/function.o] Error 1
